@@ -61,3 +61,4 @@
 - Animations for passing through Isafdar Dense Forest added
 - Implement Wire Traps, Leaf Traps, and Stick Traps in Isafdar
 - Quest point cape/hood no longer unequip on login if wearing QP hood
+- Random Event Genie lamps now scale exp correctly 
